chore(refactor): refactoring codebase
* refactored duplicated error responses

* reduce cognitive complexity for trips controllers

* update README and swagger

* change trip.status from integer(1/9) to ('active'/'cancelled')

* refactor getAll and getOne queries

[Finishes #167915238]
