# server/v2/controllers/trips.js
@@ -24,13 +24,11 @@ const getAllTrips = async (req, res) => {
     let trips = await tripModel.getAllTripsDB();
     const { origin } = req.query;
     const { destination } = req.query;
-    if (trips) {
-      if (origin) {
-        trips = trips.filter(trip => trip.origin.toLowerCase() === origin.toLowerCase());
-      }
-      if (destination) {
-        trips = trips.filter(trip => trip.destination.toLowerCase() === destination.toLowerCase());
-      }
+    if (trips && origin) {
+      trips = trips.filter(trip => trip.origin.toLowerCase() === origin.toLowerCase());
+    }
+    if (trips && destination) {
+      trips = trips.filter(trip => trip.destination.toLowerCase() === destination.toLowerCase());
     }
     if (!trips.length) {
       return responseError(res, 404, 'There are no Trips yet!');
@@ -38,7 +36,7 @@ const getAllTrips = async (req, res) => {
     if (req.user && req.user.is_admin) {
       return responseSuccess(res, 200, 'Trips Successfully Fetched', trips);
     }
-    trips = trips.filter(trip => trip.status === 1);
+    trips = trips.filter(trip => trip.status === 'active');
     return responseSuccess(res, 200, 'Trips Successfully Fetched', trips);
   } catch (error) {
     return responseError(res, 500, 'Oops! Cannot retrieve trips. :(');
@@ -52,17 +50,14 @@ const getOneTrip = async (req, res) => {
   }
   const tripId = parseInt(req.params.id, 10);
   try {
-    let oneTrip = await tripModel.getOneTripDB(tripId);
+    const oneTrip = await tripModel.getOneTripDB(tripId);
     if (oneTrip && req.user && req.user.is_admin) {
       return responseSuccess(res, 200, 'Trip Successfully Fetched', oneTrip);
     }
-    if (oneTrip && oneTrip.status === 9) {
-      oneTrip = '';
+    if (!oneTrip || oneTrip.status === 'cancelled') {
+      return responseError(res, 404, 'No Trip Found!');
     }
-    if (oneTrip) {
-      return responseSuccess(res, 200, 'Trip Successfully Fetched', oneTrip);
-    }
-    return responseError(res, 404, 'No Trip Found!');
+    return responseSuccess(res, 200, 'Trip Successfully Fetched', oneTrip);
   } catch (err) {
     return responseError(res, 400, err);
   }
@@ -98,9 +93,8 @@ const cancelTrip = async (req, res) => {
   const tripId = parseInt(req.params.id, 10);
   try {
     const oneTrip = await tripModel.getOneTripDB(tripId);
-    const cancelStatus = { status: 9 }; // cancelled trip are assigned the status 9
     if (oneTrip) {
-      const cancelledTrip = await tripModel.cancelTrip(tripId, cancelStatus);
+      const cancelledTrip = await tripModel.cancelTrip(tripId);
       return responseSuccess(res, 200, 'Trip Successfully Cancelled', cancelledTrip);
     }
     return responseError(res, 404, `Cannot find trip of id: ${tripId}`);
